--- a/views/artists/artistDetail.hbs
+++ b/views/artists/artistDetail.hbs
@@ -36,7 +36,7 @@
                     <form action="/users/addfavorite" method="POST">
                         <input type="hidden" id="eventName" name="artist" value="{{body.name}}">
                         <input type="hidden" id="eventName" name="artist" value="{{body.id}}">
-                        <button class="btn btn-danger"> ADD TO FAVORITES </button>
+                        <button class="btn btn-success"> ADD TO FAVORITES </button>
                     </form>
                     {{/if}}
                 </div>
