--- a/views/artists/artistList.hbs
+++ b/views/artists/artistList.hbs
@@ -18,10 +18,9 @@
                         <img class="img-card-img" src="{{images.[0].url}}" alt="{{name}}">
                     </div>
                     <div class="container">
-                        <p><strong>Name:</strong> {{name}}</p>
+                        <p class="mb-2"><strong>Name:</strong> {{name}}</p>
                         <a href="/artists/{{id}}"> View Details </a>
                     </div>
-                    {{!-- <p><strong>Description:</strong> {{description}}</p> --}}
                 </article>
 
             </div>
