--- a/views/artists/artistSearch.hbs
+++ b/views/artists/artistSearch.hbs
@@ -7,7 +7,7 @@
     <div class="container mt-5">
         <form method="GET" action="/artists/search-results">
 
-            <input type="text" name="nameArtist">
+            <input type="text" class="form-control mb-3" name="nameArtist">
             <input type="submit" value="Seach artist" class="btn btn-light">
 
         </form>
