--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -28,34 +28,23 @@
                     <input type="date" class="form-control" id="" name="startDate">
                 </div>
 
-                <div class="mb-4">
+                <div class="mb-5">
                     <label for="" class="form-label">End Date</label>
                     <input type="date" class="form-control" id="" name="endDate">
                 </div>
 
-                <div class="container mb-3">
-                    <label for=""> LATITUD </label>
-                    <input type="text" name="lat">
+                <div class="mb-3">
+                    <label for="" class="form-label"> Latitude </label>
+                    <input type="text" class="form-control" name="lat">
                 </div>
 
-                <div class="container mb-3">
-                    <label for=""> LONGITUD </label>
-                    <input type="text" name="lon">
+                <div class="mb-5">
+                    <label for="" class="form-label"> Longitude </label>
+                    <input type="text" class="form-control" name="lon">
                 </div>
 
 
-                {{!-- GERMAN --}}
-                {{!-- <div class="mb-3">
-                    <label for="artist1" class="form-label">Artista #1</label>
-                    <input type="text" class="form-control" id="artist1" name="artist1">
-                    <ul id="artist1results">
-
-                    </ul>
-                </div> --}}
-
-                {{!-- NUEVO INTENTO --}}
-                <div class="container">
-
+                <div class="mt-5">
                     <div class="container mb-3">
                         <label for="artist1">Artista #1</label>
                         <input list="artist1results" id="artist1" name="artist1">
