--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 
 <body>
 
-   <nav class="navbar navbar-expand-lg bg-color">
+   <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
 
          <a class="navbar-brand" href="/">Home</a>
@@ -60,7 +60,7 @@
                <li class="nav-item ">
                   <a class="nav-link active d-flex flex-row align-items-center" aria-current="page" href="/profile">
                      <div class="user-img">
-                        <img src="{{currentUser.profileImg}}" alt="">
+                        <img src="{{currentUser.profileImg}}" alt="profile-image" class="rounded-circle">
                      </div>
                      <p> {{currentUser.username}} </p>
                   </a>
