--- a/views/events/eventDetails.hbs
+++ b/views/events/eventDetails.hbs
@@ -14,22 +14,22 @@
 
         <div class="col-md-4">
             <div class="mb-5">
-                <p><strong>DESCRIPTION: </strong></p>
+                <p class="mb-2"><strong>DESCRIPTION: </strong></p>
                 <p> {{event.description}} </p>
             </div>
-            <p><strong>START DATE: </strong> {{startDateFormatted}} </p>
+            <p class="mb-2"><strong>START DATE: </strong> {{startDateFormatted}} </p>
             <p><strong>END DATE: </strong> {{endDateFormatted}} </p>
         </div>
 
         <div class="col-md-2 col-gd-6">
-            <p><strong> ARTIST LIST: </strong></p>
+            <p class="mb-2"><strong> ARTIST LIST: </strong></p>
             {{#each event.artists}}
             <a href="/api/getOneArtist/{{this}}" class="d-block mb-2"> {{this}} </a>
             {{/each}}
         </div>
 
         <div class="col-md-2">
-            <p><strong> ASSISTANTS LIST ({{event.assistants.length}}): </strong></p>
+            <p class="mb-2"><strong> ASSISTANTS LIST ({{event.assistants.length}}): </strong></p>
             {{#each event.assistants}}
             <a href="/users/{{id}}" class="d-block mb-2"> {{username}} </a>
             {{/each}}
@@ -48,7 +48,7 @@
         </form>
         {{else}}
         <form action="/events/{{event.id}}/assist" method="POST">
-            <button class="btn btn-danger mb-3"> Assist </button>
+            <button class="btn btn-success mb-3"> Assist </button>
         </form>
         {{/if}}
 
