--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,42 +1,3 @@
-{{!-- <div class="container mt-5">
-    <h1> {{appTitle}} 🚀</h1>
-    <p>Welcome Ironhacker!</p>
+<div class="background-index">
 
-    <div class="d-grid gap-2 col-3 mx-auto">
-        <img src="/public/images/logo_Spotify.png" alt="Spotify_logo">
-        <a href="/artists" class="btn btn-light">TOP 20 Artists</a>
-        <a href="/events" class="btn btn-light">Events</a>
-    </div>
-
-
-    {{#if errMessage}}
-    <div id="errorMessage">
-        <p>{{errMessage}}</p>
-    </div>
-    {{/if}}
-
-</div> --}}
-
-<section>
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="images/carousel1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/carousel2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/carousel3.jpg" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-</section>
+</div>
