--- a/views/users/userDetails.hbs
+++ b/views/users/userDetails.hbs
@@ -6,7 +6,7 @@
 
     <hr>
 
-    <div class="row container mt-5">
+    <div class="row container mt-5 mb-5">
 
         <div class="col-md-6 col-gd-3">
             <img src="{{user.profileImg}}" alt="{{user.name}}">
@@ -18,9 +18,9 @@
                 <h2>{{user.username}}</h2>
             </div>
 
-            <div class="container mt-5">
-                <p><strong>Email:</strong> {{user.email}}</p>
-                <p><strong>Role:</strong> {{user.role}}</p>
+            <div class="container mt-4">
+                <p class="mb-2"><strong>Email:</strong> {{user.email}}</p>
+                <p class="mb-2"><strong>Role:</strong> {{user.role}}</p>
             </div>
 
             {{#if isAdmin }}
